Port to quarkus